@@ -846,174 +846,6 @@
    <element value="/templates/tr/getSubNavigation?site=default"/>
    <element value="/templates/tr/getSubNavigation?tabselected=products"/>
    <element value="/templates/tr/getSubNavigation?tabselected=themes"/>
-   <element value="/templates/ar/getSitemap"/>
-   <element value="/templates/ar/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/ar/getSitemap?site=eunis"/>
-   <element value="/templates/ar/getSitemap?site=default"/>
-   <element value="/templates/ar/getSitemap?tabselected=products"/>
-   <element value="/templates/ar/getSitemap?tabselected=themes"/>
-   <element value="/templates/bg/getSitemap"/>
-   <element value="/templates/bg/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/bg/getSitemap?site=eunis"/>
-   <element value="/templates/bg/getSitemap?site=default"/>
-   <element value="/templates/bg/getSitemap?tabselected=products"/>
-   <element value="/templates/bg/getSitemap?tabselected=themes"/>
-   <element value="/templates/cs/getSitemap"/>
-   <element value="/templates/cs/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/cs/getSitemap?site=eunis"/>
-   <element value="/templates/cs/getSitemap?site=default"/>
-   <element value="/templates/cs/getSitemap?tabselected=products"/>
-   <element value="/templates/cs/getSitemap?tabselected=themes"/>
-   <element value="/templates/da/getSitemap"/>
-   <element value="/templates/da/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/da/getSitemap?site=eunis"/>
-   <element value="/templates/da/getSitemap?site=default"/>
-   <element value="/templates/da/getSitemap?tabselected=products"/>
-   <element value="/templates/da/getSitemap?tabselected=themes"/>
-   <element value="/templates/de/getSitemap"/>
-   <element value="/templates/de/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/de/getSitemap?site=eunis"/>
-   <element value="/templates/de/getSitemap?site=default"/>
-   <element value="/templates/de/getSitemap?tabselected=products"/>
-   <element value="/templates/de/getSitemap?tabselected=themes"/>
-   <element value="/templates/el/getSitemap"/>
-   <element value="/templates/el/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/el/getSitemap?site=eunis"/>
-   <element value="/templates/el/getSitemap?site=default"/>
-   <element value="/templates/el/getSitemap?tabselected=products"/>
-   <element value="/templates/el/getSitemap?tabselected=themes"/>
-   <element value="/templates/getSitemap"/>
-   <element value="/templates/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/getSitemap?site=eunis"/>
-   <element value="/templates/getSitemap?site=default"/>
-   <element value="/templates/getSitemap?tabselected=products"/>
-   <element value="/templates/getSitemap?tabselected=themes"/>
-   <element value="/templates/es/getSitemap"/>
-   <element value="/templates/es/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/es/getSitemap?site=eunis"/>
-   <element value="/templates/es/getSitemap?site=default"/>
-   <element value="/templates/es/getSitemap?tabselected=products"/>
-   <element value="/templates/es/getSitemap?tabselected=themes"/>
-   <element value="/templates/et/getSitemap"/>
-   <element value="/templates/et/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/et/getSitemap?site=eunis"/>
-   <element value="/templates/et/getSitemap?site=default"/>
-   <element value="/templates/et/getSitemap?tabselected=products"/>
-   <element value="/templates/et/getSitemap?tabselected=themes"/>
-   <element value="/templates/eu/getSitemap"/>
-   <element value="/templates/eu/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/eu/getSitemap?site=eunis"/>
-   <element value="/templates/eu/getSitemap?site=default"/>
-   <element value="/templates/eu/getSitemap?tabselected=products"/>
-   <element value="/templates/eu/getSitemap?tabselected=themes"/>
-   <element value="/templates/fi/getSitemap"/>
-   <element value="/templates/fi/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/fi/getSitemap?site=eunis"/>
-   <element value="/templates/fi/getSitemap?site=default"/>
-   <element value="/templates/fi/getSitemap?tabselected=products"/>
-   <element value="/templates/fi/getSitemap?tabselected=themes"/>
-   <element value="/templates/fr/getSitemap"/>
-   <element value="/templates/fr/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/fr/getSitemap?site=eunis"/>
-   <element value="/templates/fr/getSitemap?site=default"/>
-   <element value="/templates/fr/getSitemap?tabselected=products"/>
-   <element value="/templates/fr/getSitemap?tabselected=themes"/>
-   <element value="/templates/hu/getSitemap"/>
-   <element value="/templates/hu/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/hu/getSitemap?site=eunis"/>
-   <element value="/templates/hu/getSitemap?site=default"/>
-   <element value="/templates/hu/getSitemap?tabselected=products"/>
-   <element value="/templates/hu/getSitemap?tabselected=themes"/>
-   <element value="/templates/is/getSitemap"/>
-   <element value="/templates/is/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/is/getSitemap?site=eunis"/>
-   <element value="/templates/is/getSitemap?site=default"/>
-   <element value="/templates/is/getSitemap?tabselected=products"/>
-   <element value="/templates/is/getSitemap?tabselected=themes"/>
-   <element value="/templates/it/getSitemap"/>
-   <element value="/templates/it/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/it/getSitemap?site=eunis"/>
-   <element value="/templates/it/getSitemap?site=default"/>
-   <element value="/templates/it/getSitemap?tabselected=products"/>
-   <element value="/templates/it/getSitemap?tabselected=themes"/>
-   <element value="/templates/lt/getSitemap"/>
-   <element value="/templates/lt/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/lt/getSitemap?site=eunis"/>
-   <element value="/templates/lt/getSitemap?site=default"/>
-   <element value="/templates/lt/getSitemap?tabselected=products"/>
-   <element value="/templates/lt/getSitemap?tabselected=themes"/>
-   <element value="/templates/lv/getSitemap"/>
-   <element value="/templates/lv/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/lv/getSitemap?site=eunis"/>
-   <element value="/templates/lv/getSitemap?site=default"/>
-   <element value="/templates/lv/getSitemap?tabselected=products"/>
-   <element value="/templates/lv/getSitemap?tabselected=themes"/>
-   <element value="/templates/mt/getSitemap"/>
-   <element value="/templates/mt/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/mt/getSitemap?site=eunis"/>
-   <element value="/templates/mt/getSitemap?site=default"/>
-   <element value="/templates/mt/getSitemap?tabselected=products"/>
-   <element value="/templates/mt/getSitemap?tabselected=themes"/>
-   <element value="/templates/nl/getSitemap"/>
-   <element value="/templates/nl/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/nl/getSitemap?site=eunis"/>
-   <element value="/templates/nl/getSitemap?site=default"/>
-   <element value="/templates/nl/getSitemap?tabselected=products"/>
-   <element value="/templates/nl/getSitemap?tabselected=themes"/>
-   <element value="/templates/no/getSitemap"/>
-   <element value="/templates/no/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/no/getSitemap?site=eunis"/>
-   <element value="/templates/no/getSitemap?site=default"/>
-   <element value="/templates/no/getSitemap?tabselected=products"/>
-   <element value="/templates/no/getSitemap?tabselected=themes"/>
-   <element value="/templates/pl/getSitemap"/>
-   <element value="/templates/pl/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/pl/getSitemap?site=eunis"/>
-   <element value="/templates/pl/getSitemap?site=default"/>
-   <element value="/templates/pl/getSitemap?tabselected=products"/>
-   <element value="/templates/pl/getSitemap?tabselected=themes"/>
-   <element value="/templates/pt/getSitemap"/>
-   <element value="/templates/pt/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/pt/getSitemap?site=eunis"/>
-   <element value="/templates/pt/getSitemap?site=default"/>
-   <element value="/templates/pt/getSitemap?tabselected=products"/>
-   <element value="/templates/pt/getSitemap?tabselected=themes"/>
-   <element value="/templates/ro/getSitemap"/>
-   <element value="/templates/ro/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/ro/getSitemap?site=eunis"/>
-   <element value="/templates/ro/getSitemap?site=default"/>
-   <element value="/templates/ro/getSitemap?tabselected=products"/>
-   <element value="/templates/ro/getSitemap?tabselected=themes"/>
-   <element value="/templates/ru/getSitemap"/>
-   <element value="/templates/ru/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/ru/getSitemap?site=eunis"/>
-   <element value="/templates/ru/getSitemap?site=default"/>
-   <element value="/templates/ru/getSitemap?tabselected=products"/>
-   <element value="/templates/ru/getSitemap?tabselected=themes"/>
-   <element value="/templates/sk/getSitemap"/>
-   <element value="/templates/sk/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/sk/getSitemap?site=eunis"/>
-   <element value="/templates/sk/getSitemap?site=default"/>
-   <element value="/templates/sk/getSitemap?tabselected=products"/>
-   <element value="/templates/sk/getSitemap?tabselected=themes"/>
-   <element value="/templates/sl/getSitemap"/>
-   <element value="/templates/sl/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/sl/getSitemap?site=eunis"/>
-   <element value="/templates/sl/getSitemap?site=default"/>
-   <element value="/templates/sl/getSitemap?tabselected=products"/>
-   <element value="/templates/sl/getSitemap?tabselected=themes"/>
-   <element value="/templates/sv/getSitemap"/>
-   <element value="/templates/sv/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/sv/getSitemap?site=eunis"/>
-   <element value="/templates/sv/getSitemap?site=default"/>
-   <element value="/templates/sv/getSitemap?tabselected=products"/>
-   <element value="/templates/sv/getSitemap?tabselected=themes"/>
-   <element value="/templates/tr/getSitemap"/>
-   <element value="/templates/tr/getSitemap?jsdisable='jquery'"/>
-   <element value="/templates/tr/getSitemap?site=eunis"/>
-   <element value="/templates/tr/getSitemap?site=default"/>
-   <element value="/templates/tr/getSitemap?tabselected=products"/>
-   <element value="/templates/tr/getSitemap?tabselected=themes"/>
   </property>
   <property name="external_urls" type="lines">
    <element value="http://sparrow.eea.europa.eu/templates_client/invalidate_cache"/>
