@@ -3,6 +3,9 @@ Changelog
 
 5.6.dev0 - (unreleased)
 -----------------------
+* Change: removed sitemap logic as we have the plone sitemap and
+  sitemap_view is no longer
+  [ichim-david refs #80210]
 
 5.5 - (2016-05-19)
 ------------------
